# seed2lp

./: .gitignore  MANIFEST.in  Makefile  README.mkd  setup.cfg  setup.py
documentations/: fba.mkd  flux.mkd  full_network.mkd  network_analyse.mkd  options.mkd  target.mkd
networks/objective/: e_coli_core_target.txt
notebook/analyses/: 01_compare_s2lp_netseed.ipynb  02_s2lp_sol_analyses.ipynb  03_iCN718.ipynb  04_supp_one_sol.ipynb  05_supp_precursor.ipynb
notebook/run/: 01_get_sbml_BiGG.ipynb  02_get_objectives.ipynb  03_run_seed2lp.ipynb  04_normalise_network.ipynb  05_run_netseed.ipynb  06_run_precursor.ipynb  07_run_seed2lp_iCN718.ipynb  08_run_seed2lp_one_solution.ipynb  09_run_scopes.ipynb  10_get_data_for_analyse.ipynb
scripts/: 01_retrieve_bigg_sbml.py  02_get_objective.py  05_format_results.py  10_1_scope_analyse.py  10_3_iCN718_metabolite_analyses.py  10_4_get_supp_data.py  10_5_get_exchange.py
scripts/slurm_cluster/: 01_job_retrieve_bigg_sbml.sh  02_01_job_get_objective.sh  02_02_get_targets.sh  02_02_job_get_targets.sh  03_01_execute_workflow_search.sh  03_01_job_run_s2lp.sh  03_02_execute_workflow_search_exclusive.sh  03_02_job_run_s2lp_exclusive.sh  03_run_s2lp.sh  04_job_run_sbml_normalisation.sh  (+25 more)
seed2lp/: __init__.py  __main__.py  argument.py  clingo_lpx.py  color.py  config.yaml  description.py  file.py  flux.py  linear.py  log_conf.yaml  logger.py  metabolite.py  network.py  reaction.py  reasoning.py  resmod.py  sbml.py  scope.py  solver.py  utils.py
tests/: fba.py  full_network.py  normalization.py  pytest.ini  target.py  utils.py
(+12 files in other folders)
