[metadata]
name = seed2lp
version = attr: seed2lp.__version__
description = Optimizable seed extraction from metabolic networks
long_description = file: README.mkd
long_description_content_type = text/markdown
author = Chabname Ghassemi Nedjad
author_email = chabname.ghassemi-nedjad@inria.fr
url = https://github.com/
license = GPL
keywords = Answer Set Programming, wrapper, clingo
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.10
    Programming Language :: ASP

[options]
zip_safe = False
include_package_data = True
packages = seed2lp
install_requires =
    clyngor>=0.3.18
    pytest>=4.4.0
    biseau>=0.0.16
    cobra
    clyngor-with-clingo
    clingo-lpx
    pyyaml
    menetools
    padmet
[options.package_data]
seed2lp = asp/*.lp

[zest.releaser]
create-wheel = yes
python-file-with-version = seed2lp/__init__.py

[options.entry_points]
console_scripts =
    seed2lp=seed2lp.__main__:main

[options.extras_require]
tests =
    pytest